# ACTAR

./: .gitignore  CalcoloVariazioneFinestra.ipynb  NetworkPerformances.ods  README.md  callRootlogon.C
ARDA-Ransac-Demonstrator/ARDA/: CMakeLists.txt
ARDA-Ransac-Demonstrator/ARDA/KaitoMacro/: AnalysisSet.cc
ARDA-Ransac-Demonstrator/ARDA/examples/: cExamplePSA.h
ARDA-Ransac-Demonstrator/ARDA/inc/: cFittedEvent.h  cFittedLine.h  cFittedLine.hpp  cInfoPrinter.h  cLeuvenPSA.h  cPSA.h  cPhysicalEvent.h  cPhysicalHit.h  cSignalPreprocessor.h  cUserInput.h
ARDA-Ransac-Demonstrator/ARDA/leuvenPSA/inc/: EdgeDetector.h  TrapezoidAnalyser.h
ARDA-Ransac-Demonstrator/ARDA/leuvenPSA/src/: TrapezoidAnalyser.cpp
ARDA-Ransac-Demonstrator/ARDA/libMFM/: CMakeLists.txt  Cobo.h  DataParameters.cc  DataParameters.h  DataScal.h  DataScalers.cc  DataScalers.h  MError.cc  MFMBasicFrame.h  MFMBlobFrame.h  MFMCommonFrame.cc  MFMEbyedatFrame.cc  MFMMutantFrame.h  MFMOscilloFrame.cc  MFMOscilloFrame.h  MFMRibfFrame.cc  MFMXmlDataDescriptionFrame.cc  MFMXmlFileHeaderFrame.h  README.txt
ARDA-Ransac-Demonstrator/ARDA/monitorScripts/: showRawEvent.cc
ARDA-Ransac-Demonstrator/ARDA/pClasses/: CMakeLists.txt
ARDA-Ransac-Demonstrator/ARDA/pClasses/inc/: pDigitalSignal.h
ARDA-Ransac-Demonstrator/ARDA/pClasses/src/: pCFD.cpp  pDSP.cpp  pFT.cpp  pSignal.cpp  pSplineArcSignal.cpp
ARDA-Ransac-Demonstrator/ARDA/scripts/: makemayaspec.cc  makepadspec.cc
ARDA-Ransac-Demonstrator/ARDA/src/: cBaselineSubtract.cc  cBasicPSA.cc  cFPNSubtract.cc  cHit.cc  cLineMinPSA.cc  cMayaBasicPSA.cc  cMultiPeakPSA.cc  cPhysicalEvent.cc  cRawSignal.cc  cRunController.cc  cRunFinder.cc  convert2txt.cc  precalibrator.cc
ARDA-Ransac-Demonstrator/bin_root6.24.06/: arda  convert2txt  libdict__CFD_rdict.pcm  libdict__DSP_rdict.pcm  libdict__Signal_rdict.pcm  libdict_rdict.pcm  precalibrator
ARDA/KaitoMacro/: DataSet.hh  DetectorSet.cc  LinkDef.h  TrackVertexFitterSelector.h
ARDA/calibrationScripts/: padcal.cal
ARDA/inc/: Parameters.h  banner.h  cAnalysisController.h  cBaselineSubtractAncillaries.h  cFittedLine_rdict.pcm  cMayaBasicPSA.h  cMultiPeakPSA.h  cRunController.h  cRunFinder.h  cSignalPreprocessorManager.h
ARDA/libMFM/: DataPar.h  MFMBasicFrame.cc  MFMBlobFrame.cc  MFMCoboFrame.cc  MFMEbyedatFrame.h  MFMExogamFrame.cc  MFMExogamFrame.h  MFMMergeFrame.cc  MFMRibfFrame.h  MFMScalerDataFrame.cc  MFMTypes.h  MFMXmlDataDescriptionFrame.h  MFMtest.cc  Makefile
ARDA/scripts/: runConverter.cc
ARDA/src/: cAnalysisController.cc  cBaselineSubtractAncillaries.cc  cLinePSA.cc  cRawEvent.cc  cSignalPreprocessorManager.cc  cThreadFunctions.cc  cUserInput.cc
Hough/: cFittedEvent.h  cTrackerFine.h  cVertexFinder.h  cVertexFinder.hpp  drawHough.cpp  drawHough_cpp.d  drawHough_cpp_ACLiC_dict_rdict.pcm  input_parameters_hough.txt  launchDataFrame.cpp  launchProof.cc  macroManualHough.cc  macroManualHough_cc.d  macroManualHough_cc_ACLiC_dict_rdict.pcm  onlyVertex.cpp  outTree.root  rootlogon.C  trackingSelector.cc  trackingSelector.h  trackingSelector_cc.d  trackingSelector_cc_ACLiC_dict_rdict.pcm
NNdevelopment/: 3DInputCNNforMultiplicityPrediction.py  3DInputCNNforMultiplicityPrediction_3Class.py  CNNforMultiplicityPrediction.py  countVertexTracks.txt  vertSize.txt
Ransac-ACTAR/: LinkDef.h  MTrack.cpp  MTrack_cpp_ACLiC_dict.cxx_tmp_11122  PROVA_411_Analysis.root  Ransac.cpp  RansacClassFit.cpp  RansacClassFit_cpp.d  RansacClassFit_cpp_ACLiC_dict_rdict.pcm  RansacClassTreeFill.cpp  RansacSelectEvents.cpp  RansacSelectEvents_cpp.d  Ransac_filltree.cc  Read.C  SimpleDrawFromTree.cc  TreeMinimalRead.C  TreeRead_C.d  Tree_Ransac_Fill.root  Utils.cpp  Utils_cpp.d  ardaDrawEvent.cpp  cTrackerRansac.h  cTrackerRansac.hpp  cTrackerRansac_h.d  cUtils.cpp  drawAnalysedEvent.cpp  drawEventsForYolo.cc  drawFittedEvents.cpp  ganil_analysis.cpp  ganil_disegnaTracce.cc  histoBeamCharge.cpp  inputParameters_E823.txt  input_parameters.txt  input_parameters_draw.txt  outTree.root  precal_ACTAR.cpp  precal_ACTAR_cpp_ACLiC_dict.cxx_tmp_20482  rootlogon.C  select100Events.cpp  thomas_draw2D.cpp  thomas_draw2D_cpp.d
Ransac-ACTAR/ARDA_extraClasses/: cFittedEvent.h  cFittedLine.h  cLine3DFCN.h
Ransac-ACTAR/AnalysisSpeed/: RansacSpeedCheck.cpp  RansacSpeedCheck_cpp.d  cTrackerRansacSpeed.h  input_parameters.txt
Ransac-ACTAR/_OLD/: cDrawEvents.h
Ransac-ACTAR/parametersAnalysis/: anaRansacParams.cpp  anaRansacZRescaling.cpp  inputParametersZRescalingAnalysis.txt  input_parameters.txt  input_parameters_pAnalysis.txt  rootlogon.C
bin_root6.24.06/: libdict__CFD_rdict.pcm  libdict__DigitalSignal_rdict.pcm  loadARDA.sh
commonDependencies/: LinkDef.h  cDrawEvents.h  cFittedEvent.h  cFittedLine.h  cTrackLines.h  cTrackerFine.h  cTrackerFine.hpp  cTrackerRansac.h  cTrackerRansac.hpp  cUtils.cpp  cUtils.h  cVertex.h  cVertexFinder.h  cVertexFinder.hpp
dataProcessing/: 3DconvertHitsToPositionROOT.cpp  convertHitsToPositionROOT.cc  loader.C  readDataNN.cpp  rootlogon.C  vertSize_10000evt.txt
precalibrator-ACTAR/: .rootlogon.py  ACTIONS_e796.CHC_PAR.run_0032.dat.10-03-20_07h04m31s  MTrack.h  MTreeStructureOld.h  TreeMerge.C  TreeMerge.C.bck  TreeMerge_C.d  TreeRead.C  TreeRead.C.bck  Utils.h  precal_ACTAR.cpp  rootlogon.C  tryPrecalibrator.ipynb
(+144 files in other folders)
